--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="비주얼 미디어를 만드는 강민제입니다.">
     <link rel="stylesheet" href="css/underconst.css">
     <title>kangminjedotcom</title>
   </head>
