--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="비주얼 미디어를 만드는 강민제입니다.">
-    <link rel="stylesheet" href="css/underconst.css">
+    <link rel="stylesheet" href="css/main.css"`123`123>
     <title>kangminjedotcom</title>
     <script type="text/javascript">
     var $circle = $('.circle');
@@ -115,8 +115,8 @@ $(window).on('mousemove', moveCircle);
                   </div>
                   <ul class="photo_list">
                     <a href="#" class="list_photo_01"> 대한민국 해군 홍보대</a>
-                    <a href="#" class="list_photo_02"> 사소한 것들에 관하여</a>
-                    <a href="#" class="list_photo_03"> Europe, 2019</a>
+                    <a href="dust.html" class="list_photo_02"> 먼지</a>
+                    <a href="#" class="list_photo_03"> 여운</a>
                   </ul>
               </div>
               <div class="tD">
