--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
       <script src="circletype.min.js"></script>
       <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <link rel="icon" href="favicon.png">
     <title>kangminjedotcom</title>
   </head>
   <body style="overflow-x: hidden">
@@ -25,8 +26,8 @@
                     <div class="dash"></div>
                   </div>
               </a>
-              
-              
+
+
 <!--
             <div class="notice_panel">
               <div class="text-kr-div">
