--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="비주얼 미디어를 만드는 강민제입니다.">
-    <link rel="stylesheet" href="css/main.css"`123`123>
+    <link rel="stylesheet" href="css/main_fixed.css"`123`123>
       <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
       <script src="circletype.min.js"></script>
       <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
