--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="canonical" href="http://kangminje.com">
     <meta property="og:type" content="website">
     <meta property="og:image" content="./srcs/og_image.jpg">
-      <meta property="og:image:width" content="1200">
-      <meta property="og:image:height" content="630">
+      <meta property="og:image:width" content="800">
+      <meta property="og:image:height" content="400">
     <meta property="og:title" content="kangminjedotcom">
     <meta property="og:description" content="이미지를 다루는 강민제입니다.">
     <meta name="description" content="이미지를 다루는 강민제입니다.">
