--- a/navy.html
+++ b/navy.html
@@ -80,6 +80,93 @@
                                 circle1.style.top = mouseY + 'px';
                             });
                             </script>
+
+                <div class="img_05">
+                    <img src="srcs/img/navy/kss/resized/kss_01.jpg" width="500px">
+                </div>
+                <div class="img_06">
+                    <a href="kss.html">
+                        <img src="srcs/img/navy/kss/resized/kss_02.jpg" width="500px">
+                    </a>
+                </div>
+                     <div class="cursor_more03">
+                        <p class="seemore_kss">See More!<br>김상순(b.1994)</p>
+                    </div>
+                            <script>
+                            const circle2 = document.querySelector(".cursor_more03");
+
+                            document.addEventListener("mousemove", (e) => {
+                                const mouseX = e.pageX-2;
+                                const mouseY = e.pageY-2;
+                                circle2.style.left = mouseX + 'px';
+                                circle2.style.top = mouseY + 'px';
+                            });
+                            </script>
+
+                <div class="img_07">
+                    <img src="srcs/img/navy/kep/resized/kep_05.jpg" width="500px">
+                </div>
+                <div class="img_08">
+                    <a href="kep.html">
+                        <img src="srcs/img/navy/kep/resized/kep_09.jpg" width="500px">
+                    </a>
+                </div>
+                     <div class="cursor_more04">
+                        <p class="seemore_kss">See More!<br>김은표(b.1999)</p>
+                    </div>
+                            <script>
+                            const circle3 = document.querySelector(".cursor_more04");
+
+                            document.addEventListener("mousemove", (e) => {
+                                const mouseX = e.pageX-2;
+                                const mouseY = e.pageY-2;
+                                circle3.style.left = mouseX + 'px';
+                                circle3.style.top = mouseY + 'px';
+                            });
+                            </script>
+                <div class="img_09">
+                    <img src="srcs/img/navy/ksh/resized/ksh_02.jpg" width="500px">
+                </div>
+                <div class="img_10">
+                    <a href="ksh.html">
+                        <img src="srcs/img/navy/ksh/resized/ksh_18.jpg" width="500px">
+                    </a>
+                </div>
+                     <div class="cursor_more05">
+                        <p class="seemore_kss">See More!<br>김상훈(b.1998)</p>
+                    </div>
+                            <script>
+                            const circle4 = document.querySelector(".cursor_more05");
+
+                            document.addEventListener("mousemove", (e) => {
+                                const mouseX = e.pageX-2;
+                                const mouseY = e.pageY-2;
+                                circle4.style.left = mouseX + 'px';
+                                circle4.style.top = mouseY + 'px';
+                            });
+                            </script>
+
+                <div class="img_11">
+                    <img src="srcs/img/navy/khj/resized/khj_13.jpg" width="500px">
+                </div>
+                <div class="img_12">
+                    <a href="khj.html">
+                        <img src="srcs/img/navy/khj/resized/khj_07.jpg" width="500px">
+                    </a>
+                </div>
+                     <div class="cursor_more06">
+                        <p class="seemore_kss">See More!<br>김현준(b.1997)</p>
+                    </div>
+                            <script>
+                            const circle5 = document.querySelector(".cursor_more06");
+
+                            document.addEventListener("mousemove", (e) => {
+                                const mouseX = e.pageX-2;
+                                const mouseY = e.pageY-2;
+                                circle5.style.left = mouseX + 'px';
+                                circle5.style.top = mouseY + 'px';
+                            });
+                            </script>
     <!--
                 <div class="img_05">
                     <img src="srcs/img/dust/dust_05.jpg" width="500px">
@@ -108,14 +195,13 @@
 -->
 
             </div>
-              <!--
+
                 <a href="seeker.html">
                     <div class="prevproj">
                         Previous Project
                     <img class="arrow_prev" src="srcs/arrow_long.png" width="22px">
                     </div>
                 </a>
-              -->
                 <a href="dust.html">
                     <div class="nextproj">
                         Next Project
