--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a href="navy.html">
                   <div class="newwork-circle">
                       <span id="newwork">
-                        NEW WORK
+                        RECENT work
                       </span>
                   </div>
                   <div class="blur"></div>
@@ -85,8 +85,7 @@
                   이것이 강민제가 이미지를 만드는 이유입니다.</p>
                 <p class="brief_kr_sans02">
                   이미지의 풍요로움은 사람들로 하여금 욕구의 만족을 보장했습니다.
-              <br>강민제는 현재의 범람하는 이미지들 속에서 높은 질의 이미지를 생산하여 
-              <br>시각적 쾌락이라는 욕망을 실현합니다.
+              <br>강민제는 현재의 범람하는 이미지들 속에서 높은 질의 이미지를 생산하여<br>시각적 쾌락이라는 욕망을 실현합니다.
                 </p>
               <div class="brief_dot01"></div>
             </div>
