--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   </head>
   <body>
 
-    <iframe class="pc" src="home_pc.html" width="100%" height="100%"></iframe>
-    <iframe class="mobile" src="../mobile/home_mobile.html" width="100%" height="100%"></iframe>
+    <h1 class="pc"> pc </h1>
+    <h1 class="mobile"> mobile </h1>
+
+    <!-- <iframe class="pc" src="home_pc.html" width="100%" height="100%"></iframe>
+    <iframe class="mobile" src="../mobile/home_mobile.html" width="100%" height="100%"></iframe> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
     </script>
