--- a/index.html
+++ b/index.html
@@ -1,32 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/iframepage.css">
-  </head>
+<html>
   <body>
 
-    <h1 class="pc"> pc </h1>
-    <h1 class="mobile"> mobile </h1>
+    <h1>Mobile test</h1>
+<script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="detectmobilebrowser.js"></script>
+<script>
+ console.log(jQuery.browser.mobile);
+ alert(jQuery.browser.mobile);
+</script>
 
-    <!-- <iframe class="pc" src="home_pc.html" width="100%" height="100%"></iframe>
-    <iframe class="mobile" src="../mobile/home_mobile.html" width="100%" height="100%"></iframe> -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
-    </script>
-
-    <script>
-
-      if (Modernizr.touchevents) {
-        // supported
-        document.querySelector('.pc').style.display = 'none';
-      } else {
-        // not-supported
-        document.querySelector('.mobile').style.display = 'none';
-      }
-
-    </script>
-
-  </body>
+</body>
 </html>
