--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
 
     <h1>Mobile test</h1>
-<script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="detectmobilebrowser.js"></script>
 <script>
  console.log(jQuery.browser.mobile);
