--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      // alert(jQuery.browser.mobile);
     </script>
     <script>
-      if(jQuery.browser.mobile == false){
+      if(jQuery.browser.mobile == true){
 		      location.href="./mobile/home_mobile.html";
         } else {
 		      location.href="home_pc.html";
