--- a/mobile/afterglow_m.html
+++ b/mobile/afterglow_m.html
@@ -149,7 +149,7 @@
   <script  src="./script.js"></script>
 
   <div class="photo">
-    <img src="../srcs/img/dust/dust_01.jpg"
+    <!-- <img src="../srcs/img/dust/dust_01.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
@@ -214,7 +214,7 @@
             height: auto;
             display: block;
             padding-top: 15%;
-            margin: 0px auto;}">
+            margin: 0px auto;}"> -->
 
   </div>
 
