--- a/mobile/navy_m.html
+++ b/mobile/navy_m.html
@@ -4,7 +4,19 @@
   <meta charset="UTF-8">
   <title>kangminjedotcom</title>
   <link rel="stylesheet" href="./style.css">
-
+  <style>
+    div{
+      text-align:center;
+    }
+    div img{
+      max-width: 44%;
+              height: auto;
+              display: block;
+              padding-top: 20%;
+              margin: 0px auto;
+              display: inline-block;
+    }
+  </style>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -44,8 +56,8 @@
                             </a>
                             <ul>
                                 <li>
-                                    <a href="#" class="second">대한민국 해군 홍보대</a>
-                                    <ul>
+                                    <a href="navy_m.html" class="second">대한민국 해군 홍보대</a>
+                                    <!-- <ul>
                                         <li><a href="yhj_m.html">유환준, 670</a></li>
                                         <li><a href="psh_m.html">박시훈, 671</a></li>
                                         <li><a href="kss_m.html">김상순, 673</a></li>
@@ -57,7 +69,7 @@
                                         <li><a href="atg_m.html">안태규, 674</a></li>
                                         <li><a href="jjy_m.html">장준영, 674</a></li>
                                         <li><a href="kjh_m.html">김지호, 674</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <li>
                                     <a href="dust_m.html" class="second">먼지</a>
@@ -148,73 +160,20 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
+
+
   <div class="photo">
-    <img src="../srcs/img/dust/dust_01.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 20%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_02.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_03.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_04.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_05.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_06.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_07.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_08.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_09.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_10.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_11.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
+    <a href="yhj_m.html"><img src="../srcs/img/navy/JPEG/navy_01.jpg" style="padding-top:25%;"></a>
+    <a href="psh_m.html"><img src="../srcs/img/navy/JPEG/navy_03.jpg"></a>
+    <a href="kss_m.html"><img src="../srcs/img/navy/kss/resized/kss_06.jpg"></a>
+    <a href="kep_m.html"><img src="../srcs/img/navy/kep/resized/kep_06.jpg"></a>
+    <a href="ksh_m.html"<img src="../srcs/img/navy/ksh/resized/ksh_18.jpg"></a>
+    <a href="khj_m.html"><img src="../srcs/img/navy/khj/resized/khj_07.jpg"></a>
+    <a href="psh_drum_m.html"><img src="../srcs/img/navy/psh_drum/temp.jpg"></a>
+    <a href="kyj_m.html"><img src="../srcs/img/navy/kyj/temp.jpg"></a>
+    <a href="jjy_m.html"><img src="../srcs/img/navy/jjy/temp.jpg"><a>
+    <a href="atg_m.html"><img src="../srcs/img/navy/atg/temp.jpg"></a>
+    <!-- <img src="../srcs/img/navy/khj/temp/temp.jpg"> -->
 
   </div>
 
