--- a/mobile/yhj_m.html
+++ b/mobile/yhj_m.html
@@ -44,8 +44,8 @@
                             </a>
                             <ul>
                                 <li>
-                                    <a href="#" class="second">대한민국 해군 홍보대</a>
-                                    <ul>
+                                    <a href="navy_m.html" class="second">대한민국 해군 홍보대</a>
+                                    <!-- <ul>
                                         <li><a href="yhj_m.html">유환준, 670</a></li>
                                         <li><a href="psh_m.html">박시훈, 671</a></li>
                                         <li><a href="kss_m.html">김상순, 673</a></li>
@@ -57,7 +57,7 @@
                                         <li><a href="atg_m.html">안태규, 674</a></li>
                                         <li><a href="jjy_m.html">장준영, 674</a></li>
                                         <li><a href="kjh_m.html">김지호, 674</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <li>
                                     <a href="dust_m.html" class="second">먼지</a>
@@ -149,31 +149,31 @@
   <script  src="./script.js"></script>
 
   <div class="photo">
-    <img src="../srcs/img/dust/dust_01.jpg"
+    <img src="../srcs/img/navy/JPEG/navy_01.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
             padding-top: 20%;
             margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_02.jpg"
+    <img src="../srcs/img/navy/JPEG/navy_02.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
             padding-top: 15%;
             margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_03.jpg"
+    <!-- <img src="../srcs/img/navy/JPEG/navy_03.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
             padding-top: 15%;
             margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_04.jpg"
+    <img src="../srcs/img/navy/JPEG/navy_04.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
             padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_05.jpg"
+            margin: 0px auto;}"> -->
+    <!-- <img src="../srcs/img/dust/dust_05.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
@@ -214,7 +214,7 @@
             height: auto;
             display: block;
             padding-top: 15%;
-            margin: 0px auto;}">
+            margin: 0px auto;}"> -->
 
   </div>
 
