--- a/mobile/dust_m.html
+++ b/mobile/dust_m.html
@@ -44,8 +44,8 @@
                             </a>
                             <ul>
                                 <li>
-                                    <a href="#" class="second">대한민국 해군 홍보대</a>
-                                    <ul>
+                                    <a href="navy_m.html" class="second">대한민국 해군 홍보대</a>
+                                    <!-- <ul>
                                         <li><a href="yhj_m.html">유환준, 670</a></li>
                                         <li><a href="psh_m.html">박시훈, 671</a></li>
                                         <li><a href="kss_m.html">김상순, 673</a></li>
@@ -57,7 +57,7 @@
                                         <li><a href="atg_m.html">안태규, 674</a></li>
                                         <li><a href="jjy_m.html">장준영, 674</a></li>
                                         <li><a href="kjh_m.html">김지호, 674</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <li>
                                     <a href="dust_m.html" class="second">먼지</a>
