--- a/mobile/navy_m.html
+++ b/mobile/navy_m.html
@@ -5,11 +5,11 @@
   <title>kangminjedotcom</title>
   <link rel="stylesheet" href="./style.css">
   <style>
-    div{
+    .photo{
       text-align:center;
     }
     div img{
-      max-width: 44%;
+      max-width: 80%;
               height: auto;
               display: block;
               padding-top: 20%;
@@ -163,16 +163,16 @@
 
 
   <div class="photo">
-    <a href="yhj_m.html"><img src="../srcs/img/navy/JPEG/navy_01.jpg" style="padding-top:25%;"></a>
-    <a href="psh_m.html"><img src="../srcs/img/navy/JPEG/navy_03.jpg"></a>
-    <a href="kss_m.html"><img src="../srcs/img/navy/kss/resized/kss_06.jpg"></a>
-    <a href="kep_m.html"><img src="../srcs/img/navy/kep/resized/kep_06.jpg"></a>
-    <a href="ksh_m.html"<img src="../srcs/img/navy/ksh/resized/ksh_18.jpg"></a>
-    <a href="khj_m.html"><img src="../srcs/img/navy/khj/resized/khj_07.jpg"></a>
-    <a href="psh_drum_m.html"><img src="../srcs/img/navy/psh_drum/temp.jpg"></a>
-    <a href="kyj_m.html"><img src="../srcs/img/navy/kyj/temp.jpg"></a>
-    <a href="jjy_m.html"><img src="../srcs/img/navy/jjy/temp.jpg"><a>
-    <a href="atg_m.html"><img src="../srcs/img/navy/atg/temp.jpg"></a>
+    <div class="img_wrapper"><a href="yhj_m.html"><img src="../srcs/img/navy/JPEG/yhj_thumb.jpg" style="padding-top:25%;"></a></div>
+    <div class="img_wrapper"><a href="psh_m.html"><img src="../srcs/img/navy/JPEG/psh_thumb.jpg"></a></div>
+    <div class="img_wrapper"><a href="kss_m.html"><img src="../srcs/img/navy/kss/resized/kss_thumb.jpg"></a></div>
+    <div class="img_wrapper"><a href="kep_m.html"><img src="../srcs/img/navy/kep/resized/kep_thumb.jpg"></a></div>
+    <div class="img_wrapper"><a href="ksh_m.html"<img src="../srcs/img/navy/ksh/resized/ksh_thumb.jpg"></a></div>
+    <div class="img_wrapper"><a href="khj_m.html"><img src="../srcs/img/navy/khj/resized/khj_thumb.jpg"></a></div>
+    <div class="img_wrapper"><a href="psh_drum_m.html"><img src="../srcs/img/navy/psh_drum/psh_drum_thumb.jpg"></a></div>
+    <div class="img_wrapper"><a href="kyj_m.html"><img src="../srcs/img/navy/kyj/kyj_thumb.jpg"></a></div>
+    <div class="img_wrapper"><a href="jjy_m.html"><img src="../srcs/img/navy/jjy/jjy_thumb.jpg"><a></div>
+    <div class="img_wrapper"><a href="atg_m.html"><img src="../srcs/img/navy/atg/atg_thumb.jpg"></a></div>
     <!-- <img src="../srcs/img/navy/khj/temp/temp.jpg"> -->
 
   </div>
