--- a/mobile/psh_m.html
+++ b/mobile/psh_m.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>kangminjedotcom</title>
   <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -148,72 +147,78 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
+<!-- 설명 -->
+<!-- <h2 class="dscr">APR 4, 2022    -    유환준   -   디자이너<br></h2> -->
+
+
+<!-- 사진 -->
+
   <div class="photo">
-    <img src="../srcs/img/dust/dust_01.jpg"
+    <img src="../srcs/img/navy/psh/resized/psh_01.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
             padding-top: 25%;
             margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_02.jpg"
+    <img src="../srcs/img/navy/psh/resized/psh_02.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
-            padding-top: 15%;
+            padding-top: 25%;
             margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_03.jpg"
+    <img src="../srcs/img/navy/psh/resized/psh_03.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
-            padding-top: 15%;
+            padding-top: 25%;
             margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_04.jpg"
+    <img src="../srcs/img/navy/psh/resized/psh_04.jpg"
+    style=" max-width: 85%;
+        height: auto;
+        display: block;
+        padding-top: 25%;
+        margin: 0px auto;}">
+    <img src="../srcs/img/navy/psh/resized/psh_05.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
-            padding-top: 15%;
+            padding-top: 25%;
             margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_05.jpg"
+    <img src="../srcs/img/navy/psh/resized/psh_06.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
-            padding-top: 15%;
+            padding-top: 25%;
             margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_06.jpg"
+    <img src="../srcs/img/navy/psh/resized/psh_07.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
-            padding-top: 15%;
+            padding-top: 25%;
             margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_07.jpg"
+    <img src="../srcs/img/navy/psh/resized/psh_08.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
-            padding-top: 15%;
+            padding-top: 25%;
             margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_08.jpg"
+    <img src="../srcs/img/navy/psh/resized/psh_09.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
-            padding-top: 15%;
+            padding-top: 25%;
             margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_09.jpg"
+    <img src="../srcs/img/navy/psh/resized/psh_10.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
-            padding-top: 15%;
+            padding-top: 25%;
             margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_10.jpg"
+    <img src="../srcs/img/navy/psh/resized/psh_11.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_11.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
+            padding-top: 25%;
             margin: 0px auto;}">
 
   </div>
