--- a/mobile/yhj_m.html
+++ b/mobile/yhj_m.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>kangminjedotcom</title>
   <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -148,12 +147,18 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
+<!-- 설명 -->
+<!-- <h2 class="dscr">APR 4, 2022    -    유환준   -   디자이너<br></h2> -->
+
+
+<!-- 사진 -->
+
   <div class="photo">
     <img src="../srcs/img/navy/JPEG/navy_01.jpg"
     style=" max-width: 85%;
             height: auto;
             display: block;
-            padding-top: 20%;
+            padding-top: 25%;
             margin: 0px auto;}">
     <img src="../srcs/img/navy/JPEG/navy_02.jpg"
     style=" max-width: 85%;
