--- a/mobile/yhj_m.html
+++ b/mobile/yhj_m.html
@@ -154,72 +154,8 @@
 <!-- 사진 -->
 
   <div class="photo">
-    <img src="../srcs/img/navy/JPEG/navy_01.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 25%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/navy/JPEG/navy_02.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <!-- <img src="../srcs/img/navy/JPEG/navy_03.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/navy/JPEG/navy_04.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}"> -->
-    <!-- <img src="../srcs/img/dust/dust_05.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_06.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_07.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_08.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_09.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_10.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/dust/dust_11.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 15%;
-            margin: 0px auto;}"> -->
+    <img style="padding-top: 25%;" src="../srcs/img/navy/JPEG/navy_01.jpg">
+    <img src="../srcs/img/navy/JPEG/navy_02.jpg">
 
   </div>
 
