--- a/mobile/psh_drum_m.html
+++ b/mobile/psh_drum_m.html
@@ -147,21 +147,34 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
+<!-- 설명 -->
+<!-- <h2 class="dscr">APR 4, 2022    -    유환준   -   디자이너<br></h2> -->
 
+
+<!-- 사진 -->
 
   <div class="photo">
-    <div class="img_wrapper"><a href="yhj_m.html"><img src="../srcs/img/navy/JPEG/yhj_thumb.jpg" style="padding-top:25%;"></a></div>
-    <div class="img_wrapper"><a href="psh_m.html"><img src="../srcs/img/navy/JPEG/psh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kss_m.html"><img src="../srcs/img/navy/kss/resized/kss_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kep_m.html"><img src="../srcs/img/navy/kep/resized/kep_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="ksh_m.html"<img src="../srcs/img/navy/ksh/resized/ksh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="khj_m.html"><img src="../srcs/img/navy/khj/resized/khj_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="psh_drum_m.html"><img src="../srcs/img/navy/psh_drum/psh_drum_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kyj_m.html"><img src="../srcs/img/navy/kyj/kyj_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="jjy_m.html"><img src="../srcs/img/navy/jjy/jjy_thumb.jpg"><a></div>
-    <div class="img_wrapper"><a href="atg_m.html"><img src="../srcs/img/navy/atg/atg_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kjh_m.html"><img src="../srcs/img/navy/kjh/kjh_thumb.jpg"></a></div>
-    <!-- <img src="../srcs/img/navy/khj/temp/temp.jpg"> -->
+    <img style="padding-top:25%;" src="../srcs/img/navy/psh_drum/psh_drum_01.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_02.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_03.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_04.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_05.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_06.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_07.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_08.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_09.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_10.jpg">
+    <img style="padding-top: 3%;" src="../srcs/img/navy/psh_drum/psh_drum_11.jpg">
+    <!-- <img src="../srcs/img/navy/psh_drum/psh_drum_12.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_13.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_14.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_15.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_17.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_18.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_19.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_20.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_21.jpg">
+    <img src="../srcs/img/navy/khj/resized/kep_22.jpg"> -->
 
   </div>
 
