--- a/mobile/psh_m.html
+++ b/mobile/psh_m.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>kangminjedotcom</title>
   <link rel="stylesheet" href="./style.css">
+  
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -154,72 +155,17 @@
 <!-- 사진 -->
 
   <div class="photo">
-    <img src="../srcs/img/navy/psh/resized/psh_01.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 25%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/navy/psh/resized/psh_02.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 25%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/navy/psh/resized/psh_03.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 25%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/navy/psh/resized/psh_04.jpg"
-    style=" max-width: 85%;
-        height: auto;
-        display: block;
-        padding-top: 25%;
-        margin: 0px auto;}">
-    <img src="../srcs/img/navy/psh/resized/psh_05.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 25%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/navy/psh/resized/psh_06.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 25%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/navy/psh/resized/psh_07.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 25%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/navy/psh/resized/psh_08.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 25%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/navy/psh/resized/psh_09.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 25%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/navy/psh/resized/psh_10.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 25%;
-            margin: 0px auto;}">
-    <img src="../srcs/img/navy/psh/resized/psh_11.jpg"
-    style=" max-width: 85%;
-            height: auto;
-            display: block;
-            padding-top: 25%;
-            margin: 0px auto;}">
+    <img style="padding-top: 25%;" src="../srcs/img/navy/psh/resized/psh_01.jpg">
+    <img src="../srcs/img/navy/psh/resized/psh_02.jpg">
+    <img src="../srcs/img/navy/psh/resized/psh_03.jpg">
+    <img src="../srcs/img/navy/psh/resized/psh_04.jpg">
+    <img src="../srcs/img/navy/psh/resized/psh_05.jpg">
+    <img src="../srcs/img/navy/psh/resized/psh_06.jpg">
+    <img src="../srcs/img/navy/psh/resized/psh_07.jpg">
+    <img src="../srcs/img/navy/psh/resized/psh_08.jpg">
+    <img src="../srcs/img/navy/psh/resized/psh_09.jpg">
+    <img src="../srcs/img/navy/psh/resized/psh_10.jpg">
+    <img src="../srcs/img/navy/psh/resized/psh_11.jpg">
 
   </div>
 
