--- a/mobile/afterglow_m.html
+++ b/mobile/afterglow_m.html
@@ -44,8 +44,8 @@
                             </a>
                             <ul>
                                 <li>
-                                    <a href="#" class="second">대한민국 해군 홍보대</a>
-                                    <ul>
+                                    <a href="navy_m.html" class="second">대한민국 해군 홍보대</a>
+                                    <!-- <ul>
                                         <li><a href="yhj_m.html">유환준, 670</a></li>
                                         <li><a href="psh_m.html">박시훈, 671</a></li>
                                         <li><a href="kss_m.html">김상순, 673</a></li>
@@ -57,14 +57,14 @@
                                         <li><a href="atg_m.html">안태규, 674</a></li>
                                         <li><a href="jjy_m.html">장준영, 674</a></li>
                                         <li><a href="kjh_m.html">김지호, 674</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <li>
                                     <a href="dust_m.html" class="second">먼지</a>
                                 </li>
-                                <!-- <li>
-                                    <a href="afterglow_m.html" class="second">여운</a>
-                                </li> -->
+                                <li>
+                                    <a href="moreworks_m.html" class="second">...</a>
+                                </li>
                             </ul>
                         </li>
                         <li id="menu_td">
@@ -89,10 +89,10 @@
 
 
                 <li id="menu_about">
-                    <a href="#">ABOUT</a>
+                    <a href="about_m.html">ABOUT</a>
                 </li>
                 <li id="menu_contacts">
-                    <a href="#">CONTACTS</a>
+                    <a href="contact_m.html">CONTACTS</a>
                 </li>
 
                 <a href="https://instagram.com/_kangvisual">
