--- a/mobile/moreworks_m.html
+++ b/mobile/moreworks_m.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>kangminjedotcom</title>
   <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -147,37 +148,9 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
-<!-- 설명 -->
-<!-- <h2 class="dscr">APR 4, 2022    -    유환준   -   디자이너<br></h2> -->
-
-
-<!-- 사진 -->
-
-  <div class="photo">
-    <img style="padding-top:25%;" src="../srcs/img/navy/psh_drum/psh_drum_01.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_02.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_03.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_04.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_05.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_06.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_07.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_08.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_09.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_10.jpg">
-    <img style="padding-top: 3%;" src="../srcs/img/navy/psh_drum/psh_drum_11.jpg">
-    <!-- <img src="../srcs/img/navy/psh_drum/psh_drum_12.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_13.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_14.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_15.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_17.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_18.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_19.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_20.jpg">
-    <img src="../srcs/img/navy/psh_drum/psh_drum_21.jpg">
-    <img src="../srcs/img/navy/khj/resized/kep_22.jpg"> -->
-
-  </div>
-
+<div class="body">
+  <h1>MORE WORKS!.pdf</h1>
+</div>
 
   <footer> <p class="copyright">ⓒ 2022 kangminje all right reserved.</p> </footer>
 
