--- a/mobile/navy_m.html
+++ b/mobile/navy_m.html
@@ -61,9 +61,9 @@
                                 <li>
                                     <a href="dust_m.html" class="second">먼지</a>
                                 </li>
-                                <!-- <li>
-                                    <a href="afterglow_m.html" class="second">여운</a>
-                                </li> -->
+                                <li>
+                                    <a href="moreworks_m.html" class="second">...</a>
+                                </li>
                             </ul>
                         </li>
                         <li id="menu_td">
@@ -88,10 +88,10 @@
 
 
                 <li id="menu_about">
-                    <a href="#">ABOUT</a>
+                    <a href="about_m.html">ABOUT</a>
                 </li>
                 <li id="menu_contacts">
-                    <a href="#">CONTACTS</a>
+                    <a href="contact_m.html">CONTACTS</a>
                 </li>
 
                 <a href="https://instagram.com/_kangvisual">
