--- a/mobile/moreworks_m.html
+++ b/mobile/moreworks_m.html
@@ -13,7 +13,7 @@
 
 <!-- 상단 바 및 메뉴버튼 아이콘 -->
 <div class="mobile-top-bar">
-    <img class="ico toggle-side-bar-btn" src="logo4.png">
+    <img class="ico toggle-side-bar-btn" id="top-bar"src="logo4.png">
     </img>
     <div class="logo"></div>
 </div>
@@ -149,10 +149,15 @@
   <script  src="./script.js"></script>
 
 <div class="body">
-  <h1>MORE WORKS!.pdf</h1>
+    <video src="../srcs/images.mp4" autoplay loop muted>
+
+    </video>
+    <h1>MORE WORKS.pdf</h1>
 </div>
 
-  <footer> <p class="copyright">ⓒ 2022 kangminje all right reserved.</p> </footer>
+
+
+  <footer style="top:30%"> <p class="copyright">ⓒ 2022 kangminje all right reserved.</p> </footer>
 
 
 </body>
