--- a/mobile/moreworks_m.html
+++ b/mobile/moreworks_m.html
@@ -149,15 +149,13 @@
   <script  src="./script.js"></script>
 
 <div class="body">
-    <video src="../srcs/images.mp4" autoplay loop muted>
-
-    </video>
+    <video src="../srcs/images.mp4" autoplay loop muted></video>
     <h1>MORE WORKS.pdf</h1>
 </div>
 
 
 
-  <footer style="top:30%"> <p class="copyright">ⓒ 2022 kangminje all right reserved.</p> </footer>
+  <footer> <p class="copyright">ⓒ 2022 kangminje all right reserved.</p> </footer>
 
 
 </body>
