--- a/mobile/moreworks_m.html
+++ b/mobile/moreworks_m.html
@@ -149,7 +149,7 @@
   <script  src="./script.js"></script>
 
 <div class="body">
-    <video src="../srcs/images.mp4" autoplay loop muted></video>
+    <video src="../srcs/images.mp4" autoplay loop muted playsinline></video>
     <h1>MORE WORKS.pdf</h1>
 </div>
 
