--- a/afterglow.html
+++ b/afterglow.html
@@ -76,7 +76,7 @@
                     <img class="arrow_prev" src="srcs/arrow_long.png" width="22px">
                     </div>
                 </a>
-                <a href="seeker.html">>
+                <a href="seeker.html">
                     <div class="nextproj">
                         Next Project
                     <img class="arrow_next" src="srcs/arrow_long.png" width="22px">
