--- a/mobile/atg_m.html
+++ b/mobile/atg_m.html
@@ -13,7 +13,7 @@
 <!-- 상단 바 및 메뉴버튼 아이콘 -->
 <div class="mobile-top-bar">
     <img class="ico toggle-side-bar-btn" src="logo4.png">
-    </img>
+    <img>
     <div class="logo"></div>
 </div>
 
