--- a/mobile/kmj_m.html
+++ b/mobile/kmj_m.html
@@ -147,29 +147,31 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
+<!-- 설명 -->
+<!-- <h2 class="dscr">APR 4, 2022    -    유환준   -   디자이너<br></h2> -->
 
+
+<!-- 사진 -->
 
   <div class="photo">
-    <div class="img_wrapper"><a href="yhj_m.html"><img src="../srcs/img/navy/JPEG/yhj_thumb.jpg" style="padding-top:25%;"></a></div>
-    <div class="img_wrapper"><a href="psh_m.html"><img src="../srcs/img/navy/JPEG/psh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kss_m.html"><img src="../srcs/img/navy/kss/resized/kss_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kep_m.html"><img src="../srcs/img/navy/kep/resized/kep_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="ksh_m.html"><img src="../srcs/img/navy/ksh/resized/ksh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="khj_m.html"><img src="../srcs/img/navy/khj/resized/khj_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="psh_drum_m.html"><img src="../srcs/img/navy/psh_drum/psh_drum_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kyj_m.html"><img src="../srcs/img/navy/kyj/kyj_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="jjy_m.html"><img src="../srcs/img/navy/jjy/jjy_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="atg_m.html"><img src="../srcs/img/navy/atg/atg_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kjh_m.html"><img src="../srcs/img/navy/kjh/kjh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="sy_m.html"><img src="../srcs/img/navy/sy/sy_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="mdi_m.html"><img src="../srcs/img/navy/mdi/mdi_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="ojw_m.html"><img src="../srcs/img/navy/ojw/ojw_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="jdj_m.html"><img src="../srcs/img/navy/jdj/jdj_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="ksr_m.html"><img src="../srcs/img/navy/ksr/ksr_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="pk_m.html"><img src="../srcs/img/navy/pk/pk_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="bhh_m.html"><img src="../srcs/img/navy/bhh/bhh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kmj_m.html"><img src="../srcs/img/navy/kmj/kmj_thumb.jpg"></a></div>
-    <!-- <img src="../srcs/img/navy/khj/temp/temp.jpg"> -->
+    <img style="padding-top:25%;" src="../srcs/img/navy/kmj/kmj_01.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_02.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_03.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_04.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_05.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_06.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_07.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_08.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_09.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_10.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_11.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_12.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_13.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_14.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_15.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_16.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_17.jpg">
+    <img src="../srcs/img/navy/kmj/kmj_18.jpg">
 
   </div>
 
