--- a/mobile/mdi_m.html
+++ b/mobile/mdi_m.html
@@ -13,7 +13,7 @@
 <!-- 상단 바 및 메뉴버튼 아이콘 -->
 <div class="mobile-top-bar">
     <img class="ico toggle-side-bar-btn" src="logo4.png">
-    </img>
+    <img>
     <div class="logo"></div>
 </div>
 
@@ -147,29 +147,36 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
+<!-- 설명 -->
+<!-- <h2 class="dscr">APR 4, 2022    -    유환준   -   디자이너<br></h2> -->
 
+
+<!-- 사진 -->
 
   <div class="photo">
-    <div class="img_wrapper"><a href="yhj_m.html"><img src="../srcs/img/navy/JPEG/yhj_thumb.jpg" style="padding-top:25%;"></a></div>
-    <div class="img_wrapper"><a href="psh_m.html"><img src="../srcs/img/navy/JPEG/psh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kss_m.html"><img src="../srcs/img/navy/kss/resized/kss_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kep_m.html"><img src="../srcs/img/navy/kep/resized/kep_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="ksh_m.html"><img src="../srcs/img/navy/ksh/resized/ksh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="khj_m.html"><img src="../srcs/img/navy/khj/resized/khj_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="psh_drum_m.html"><img src="../srcs/img/navy/psh_drum/psh_drum_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kyj_m.html"><img src="../srcs/img/navy/kyj/kyj_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="jjy_m.html"><img src="../srcs/img/navy/jjy/jjy_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="atg_m.html"><img src="../srcs/img/navy/atg/atg_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kjh_m.html"><img src="../srcs/img/navy/kjh/kjh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="sy_m.html"><img src="../srcs/img/navy/sy/sy_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="mdi_m.html"><img src="../srcs/img/navy/mdi/mdi_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="ojw_m.html"><img src="../srcs/img/navy/ojw/ojw_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="jdj_m.html"><img src="../srcs/img/navy/jdj/jdj_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="ksr_m.html"><img src="../srcs/img/navy/ksr/ksr_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="pk_m.html"><img src="../srcs/img/navy/pk/pk_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="bhh_m.html"><img src="../srcs/img/navy/bhh/bhh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kmj_m.html"><img src="../srcs/img/navy/kmj/kmj_thumb.jpg"></a></div>
-    <!-- <img src="../srcs/img/navy/khj/temp/temp.jpg"> -->
+    <img style="padding-top:25%;" src="../srcs/img/navy/mdi/mdi_01.jpg">
+    <img src="../srcs/img/navy/mdi/mdi_02.jpg">
+    <img src="../srcs/img/navy/mdi/mdi_03.jpg">
+    <img src="../srcs/img/navy/mdi/mdi_04.jpg">
+    <img src="../srcs/img/navy/mdi/mdi_05.jpg">
+    <img src="../srcs/img/navy/mdi/mdi_06.jpg">
+    <img src="../srcs/img/navy/mdi/mdi_07.jpg">
+    <img src="../srcs/img/navy/mdi/mdi_08.jpg">
+    <img src="../srcs/img/navy/mdi/mdi_09.jpg">
+<!--
+    <img src="../srcs/img/navy/psh_drum/psh_drum_10.jpg">
+    <img style="padding-top: 3%;" src="../srcs/img/navy/psh_drum/psh_drum_11.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_12.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_13.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_14.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_15.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_17.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_18.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_19.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_20.jpg">
+    <img src="../srcs/img/navy/psh_drum/psh_drum_21.jpg">
+    <img src="../srcs/img/navy/khj/resized/kep_22.jpg"> 
+-->
 
   </div>
 
