--- a/mobile/sy_m.html
+++ b/mobile/sy_m.html
@@ -13,7 +13,7 @@
 <!-- 상단 바 및 메뉴버튼 아이콘 -->
 <div class="mobile-top-bar">
     <img class="ico toggle-side-bar-btn" src="logo4.png">
-    </img>
+    <img>
     <div class="logo"></div>
 </div>
 
@@ -147,31 +147,121 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
+<!-- 설명 -->
+<!-- <h2 class="dscr">APR 4, 2022    -    유환준   -   디자이너<br></h2> -->
 
+
+<!-- 사진 -->
 
   <div class="photo">
-    <div class="img_wrapper"><a href="yhj_m.html"><img src="../srcs/img/navy/JPEG/yhj_thumb.jpg" style="padding-top:25%;"></a></div>
-    <div class="img_wrapper"><a href="psh_m.html"><img src="../srcs/img/navy/JPEG/psh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kss_m.html"><img src="../srcs/img/navy/kss/resized/kss_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kep_m.html"><img src="../srcs/img/navy/kep/resized/kep_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="ksh_m.html"><img src="../srcs/img/navy/ksh/resized/ksh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="khj_m.html"><img src="../srcs/img/navy/khj/resized/khj_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="psh_drum_m.html"><img src="../srcs/img/navy/psh_drum/psh_drum_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kyj_m.html"><img src="../srcs/img/navy/kyj/kyj_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="jjy_m.html"><img src="../srcs/img/navy/jjy/jjy_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="atg_m.html"><img src="../srcs/img/navy/atg/atg_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kjh_m.html"><img src="../srcs/img/navy/kjh/kjh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="sy_m.html"><img src="../srcs/img/navy/sy/sy_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="mdi_m.html"><img src="../srcs/img/navy/mdi/mdi_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="ojw_m.html"><img src="../srcs/img/navy/ojw/ojw_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="jdj_m.html"><img src="../srcs/img/navy/jdj/jdj_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="ksr_m.html"><img src="../srcs/img/navy/ksr/ksr_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="pk_m.html"><img src="../srcs/img/navy/pk/pk_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="bhh_m.html"><img src="../srcs/img/navy/bhh/bhh_thumb.jpg"></a></div>
-    <div class="img_wrapper"><a href="kmj_m.html"><img src="../srcs/img/navy/kmj/kmj_thumb.jpg"></a></div>
-    <!-- <img src="../srcs/img/navy/khj/temp/temp.jpg"> -->
-
+    <img style="padding-top:25%;" id="pic01" src="../srcs/img/navy/sy/sy_01.jpg">
+    <img style="padding-top:25%;" id="pic02" src="../srcs/img/navy/sy/sy_02.jpg">
+    <img src="../srcs/img/navy/sy/sy_03.jpg">
+    <img src="../srcs/img/navy/sy/sy_04.jpg">
+    <img src="../srcs/img/navy/sy/sy_05.jpg">
+    <img src="../srcs/img/navy/sy/sy_06.jpg">
+    <img id="pic03" src="../srcs/img/navy/sy/sy_07.jpg">
+    <img id="pic04" src="../srcs/img/navy/sy/sy_08.jpg">
+    <img id="pic05" src="../srcs/img/navy/sy/sy_09.jpg">
+    <img id="pic06" src="../srcs/img/navy/sy/sy_10.jpg">
+    <img id="pic07" src="../srcs/img/navy/sy/sy_11.jpg">
+    <img id="pic08"src="../srcs/img/navy/sy/sy_12.jpg">
+    <img id="pic09"src="../srcs/img/navy/sy/sy_13.jpg">
+    <img id="pic10"src="../srcs/img/navy/sy/sy_14.jpg">
+    <img src="../srcs/img/navy/sy/sy_15.jpg">
   </div>
+    
+<script src="https://code.jquery.com/jquery-3.5.1.js" 
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous">
+</script>
+ 
+<script>
+    $(document).ready(function(){
+            /*웹페이지 열었을 때*/
+            $("#pic01").show();
+            $("#pic02").hide();
+ 
+            /*img1을 클릭했을 때 img2를 보여줌*/
+            $("#pic01").click(function(){
+                $("#pic01").hide();
+                $("#pic02").show();
+            });
+ 
+            /*img2를 클릭했을 때 img1을 보여줌*/
+            $("#pic02").click(function(){
+                $("#pic01").show();
+                $("#pic02").hide();
+            });
+        });
+        $(document).ready(function(){
+            /*웹페이지 열었을 때*/
+            $("#pic03").show();
+            $("#pic04").hide();
+ 
+            /*img1을 클릭했을 때 img2를 보여줌*/
+            $("#pic03").click(function(){
+                $("#pic03").hide();
+                $("#pic04").show();
+            });
+ 
+            /*img2를 클릭했을 때 img1을 보여줌*/
+            $("#pic04").click(function(){
+                $("#pic03").show();
+                $("#pic04").hide();
+            });
+        });
+        $(document).ready(function(){
+            /*웹페이지 열었을 때*/
+            $("#pic05").show();
+            $("#pic06").hide();
+ 
+            /*img1을 클릭했을 때 img2를 보여줌*/
+            $("#pic05").click(function(){
+                $("#pic05").hide();
+                $("#pic06").show();
+            });
+ 
+            /*img2를 클릭했을 때 img1을 보여줌*/
+            $("#pic06").click(function(){
+                $("#pic05").show();
+                $("#pic06").hide();
+            });
+        });
+        $(document).ready(function(){
+            /*웹페이지 열었을 때*/
+            $("#pic07").show();
+            $("#pic08").hide();
+ 
+            /*img1을 클릭했을 때 img2를 보여줌*/
+            $("#pic07").click(function(){
+                $("#pic07").hide();
+                $("#pic08").show();
+            });
+ 
+            /*img2를 클릭했을 때 img1을 보여줌*/
+            $("#pic08").click(function(){
+                $("#pic07").show();
+                $("#pic08").hide();
+            });
+        });
+        $(document).ready(function(){
+            /*웹페이지 열었을 때*/
+            $("#pic09").show();
+            $("#pic10").hide();
+ 
+            /*img1을 클릭했을 때 img2를 보여줌*/
+            $("#pic09").click(function(){
+                $("#pic09").hide();
+                $("#pic10").show();
+            });
+ 
+            /*img2를 클릭했을 때 img1을 보여줌*/
+            $("#pic10").click(function(){
+                $("#pic09").show();
+                $("#pic10").hide();
+            });
+        });
+</script>
 
 
   <footer> <p class="copyright">ⓒ 2022 kangminje all right reserved.</p> </footer>
